--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Already_have_account">Already have an account? Sign In</string>
     <string name="search">search</string>
+    <string name="logo">logo</string>
 </resources>
