--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,4 +134,11 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="MyOrders">My Orders</string>
+    <string name="confirmOrder">Confirm success</string>
+    <string name="title_activity_cart_order">CartOrderActivity</string>
+    <string name="tab_text_1">My Cart</string>
+    <string name="tab_text_2">My Orders</string>
+    <string name="checkout">Checkout</string>
+    <string name="order_id">LQNSU346JK</string>
 </resources>
